--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -34,6 +34,8 @@ nav.uk-navbar.uk-navbar-container.n42-navbar.n42-mobile-nav uk-navbar='' uk-stic
       li
         = link_to "Referenzen", "referenzen.html"
       li
+        = link_to "Blog", "/blog/index.html"
+      li
         a href="#kontakt" uk-scroll='duration: 300; offset: 40'
           | Kontakt
 
@@ -62,6 +64,8 @@ nav.uk-navbar.uk-navbar-container.n42-navbar uk-navbar="" uk-sticky='' class="uk
           | 42Stacks
       li
         = link_to "Referenzen", "referenzen.html"
+      li
+        = link_to "Blog", "/blog/index.html"
       li
         a href="#kontakt" uk-scroll='duration: 300; offset: 20'
           | Kontakt
