--- a/source/_nav.html.slim
+++ b/source/_nav.html.slim
@@ -2,7 +2,7 @@
 div
   nav.uk-navbar.uk-navbar-container.n42-navbar.n42-mobile-nav uk-navbar='' uk-sticky='' class="uk-hidden@m"
     div.uk-navbar-left
-      = link_to 'index.html', class:'uk-navbar-item uk-logo' do
+      = link_to '/index.html', class:'uk-navbar-item uk-logo' do
         = image_tag 'logo.svg', style:'width: 120px'
     div.uk-navbar-right
       a class="uk-navbar-toggle uk-navbar-toggle-icon" uk-toggle="" uk-navbar-toggle-icon=true href="#offcanvas-slide"
@@ -23,13 +23,15 @@ div
         li
           = link_to "Referenzen", "referenzen.html"
         li
+          = link_to "Blog", "/blog/index.html"
+        li
           = link_to 'Kontakt', "/#kontakt"
 
 
 
   nav.uk-navbar.uk-navbar-container.n42-navbar uk-navbar="" uk-sticky='' class="uk-visible@m"
     div.uk-navbar-left
-      = link_to 'index.html', class:'uk-navbar-item uk-logo' do
+      = link_to '/index.html', class:'uk-navbar-item uk-logo' do
         = image_tag 'logo.svg', style:'width: 160px'
 
     div.uk-navbar-right
@@ -46,5 +48,7 @@ div
           = link_to '42Stacks', "/#stacks"
         li
           = link_to "Referenzen", "referenzen.html"
+        li
+          = link_to "Blog", "/blog/index.html"
         li
           = link_to 'Kontakt', "/#kontakt"
