--- a/source/blog/index.html.slim
+++ b/source/blog/index.html.slim
@@ -7,8 +7,8 @@
 
 div.uk-container.n42-blog
   div.uk-flex-center uk-grid=''
-    div.uk-width-1-2
-      h1.uk-margin-top.uk-margin-small-bottom Blog
+    div.uk-width-2-3
+      h1.uk-margin-medium-top.uk-margin-small-bottom Blog
       h2.uk-margin-remove-top.uk-margin-large-bottom These are the tales of our everyday findings in the wide realm of IT and Technology. We make Apps for iOS, Android and the web - and talk about it.
 
       - blog.articles.each do |article|
@@ -16,7 +16,7 @@ div.uk-container.n42-blog
           h2.uk-margin-remove-bottom = link_to article.title, article
           p.uk-margin-remove-top.uk-margin-small-bottom = article.date.strftime('%b %e, %Y')
           = link_to article do
-            = article.summary
+            = article.data['summary']
 
     / - if paginate && num_pages > 1
     /   p Page #{page_number} of #{num_pages}
