--- a/assets/stylesheets/blog.scss
+++ b/assets/stylesheets/blog.scss
@@ -24,7 +24,7 @@
     font-size: 3em;
   }
   pre{
-    background-color: #f5f3ed;
+    background-color: #f5f2f0;
     padding: 1em;
     border-radius: 3px;
   }
