fix mail adress

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -289,8 +289,8 @@ section.uk-section.uk-text-center#kontakt.n42-section-border
         p
           span.contact.uk-margin-small-bottom.n42-text-red uk-icon="icon: mail; ratio:2"
           br
-          a.n42-link href="mailto:info@42stacks.de"
-            |info@42stacks.de
+          a.n42-link href="mailto:info@num42.de"
+            |info@num42.de
 
       div
         p
