--- a/assets/stylesheets/all.scss
+++ b/assets/stylesheets/all.scss
@@ -7,7 +7,8 @@
 @import "font";
 @import "ionicons.css";
 @import "blog.scss";
-@import "../../node_modules/prismjs/themes/prism.css";
+@import "_highlighting.css";
+// @import "../../node_modules/prismjs/themes/prism.css";
 
 $red-color: #D24335;
 
