--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -87,8 +87,9 @@ div.uk-section#leistungen.n42-section-border
         span.n42-text-red uk-icon="icon: desktop; ratio: 3"
         h2 Entwicklung
         p
-          | Egal ob iOS, Android oder Web, wir wissen, was Apps ausmacht – und setzen das für Sie um. 
+          | Egal ob iOS, Android oder Web, wir wissen, was Apps ausmacht – und setzen das für Sie um.
           a href="#entwicklung" uk-scroll='duration: 200; offset: 20'
+            br
             | Mehr über unsere Technologien und den Entwicklungsprozess.
 
 div.uk-section.uk-section-muted#team.n42-section-border
@@ -185,14 +186,14 @@ div.uk-section.uk-section-muted#team.n42-section-border
               = image_tag "avatar_jmah_v4c.png"
         h3.uk-margin-small-top.uk-margin-bottom Johannes Mahr
 
-    p.uk-margin-medium-top.uk-text-center  
+    p.uk-margin-medium-top.uk-text-center
       |  Wir sind Entwickler aus Leidenschaft. Für uns ist die Entwicklung von Web- und Mobile-Anwendungen nicht nur unser Beruf,
       |  sondern unsere Berufung. Durch unsere kurzen Kommunikationswege können wir agil arbeiten und schnell auf Ihre Wünsche eingehen.
       |  Wir sind vielfältig aufgestellt und jeder Mitarbeiter bringt seine individuellen Stärken mit ein.
       |  Von der Beratung, der Kundenbetreuung über das Design bis hin zur Entwicklung gibt es bei uns für jeden Bereich mehrere Experten.
       |  Wir begleiten Sie von der ersten Idee bis zur Veröffentlichung.
       |  Wir sind nicht nur irgendeine Agentur, wir machen Ihr Produkt einzigartig.
-    
+
 div.uk-section#beratung.n42-section-border
   .uk-container.uk-text-center
     h1 Beratung
@@ -201,11 +202,11 @@ div.uk-section#beratung.n42-section-border
     .uk-grid (class="uk-child-width-1-1 uk-child-width-1-4@m")
       div
         h2 Was?
-        p.uk-margin-large-bottom Sie und Ihre Idee stehen natürlich weiterhin im Mittelpunkt. Unsere Aufgabe ist es, Ihnen mit unserem technischen Verständniss unter die Arme zu greifen.
+        p.uk-margin-large-bottom Sie und Ihre Idee stehen natürlich weiterhin im Mittelpunkt. Unsere Aufgabe ist es, Ihnen mit unserem technischen Verständnis unter die Arme zu greifen.
       div
         h2 Wann?
         p.uk-margin-large-bottom Der beste Zeitpunkt um uns zu kontaktieren ist ganz am Anfang. Denn dann können wir gemeinsam mit Ihnen an Ihrer Idee feilen und die beste Möglichkeit ausarbeiten.
-      
+
       div
         h2 Wie?
         p.uk-margin-large-bottom Wir bieten Ihnen einen ersten kostenlosen Workshop und eine darauf aufbauende Aufwandsschätzung. Dann erstellen wir für Sie ein unverbindliches Angebot.
@@ -238,7 +239,7 @@ div.uk-section.uk-section-muted#entwicklung.n42-section-border
         p.uk-margin-large-bottom.space-xl
           | Mit uns ist Ihr Produkt auf dem neuesten Stand und bleibt es auch. Egal ob zusätzliche Anforderungen entstehen, technologische Weiterentwicklungen nötig sind oder Ihre Anwendung einfach einen neuen Anstrich braucht.
 
-    
+
 div.uk-section.uk-text-center.n42-section-border
   h1 Technologie
   .uk-container
@@ -294,7 +295,7 @@ div.uk-section#jobs.n42-section-border
       |Im Moment haben wir keine Stellen ausgeschrieben.
       br
       |Wir freuen uns dennoch über Initiativbewerbungen oder ein einfaches "Hi, hier bin ich".
-  
+
 
 section.uk-section.uk-text-center#kontakt.n42-section-border.uk-section-muted
   div.uk-container.uk-container-small.n42-container
