fixed referenzen link

--- a/source/_nav.html.slim
+++ b/source/_nav.html.slim
@@ -21,7 +21,7 @@ div
         li
           = link_to '42Stacks', "/#stacks"
         li
-          = link_to "Referenzen", "referenzen.html"
+          = link_to "Referenzen", "/referenzen.html"
         li
           = link_to "Blog", "/blog/index.html"
         li
@@ -47,7 +47,7 @@ div
         li
           = link_to '42Stacks', "/#stacks"
         li
-          = link_to "Referenzen", "referenzen.html"
+          = link_to "Referenzen", "/referenzen.html"
         li
           = link_to "Blog", "/blog/index.html"
         li
