--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -192,29 +192,27 @@ div.uk-section.uk-section-muted#team.n42-section-border
       |  Wir sind vielfältig aufgestellt und jeder Mitarbeiter bringt seine individuellen Stärken mit ein.
       |  Von der Beratung, der Kundenbetreuung über das Design bis hin zur Entwicklung gibt es bei uns für jeden Bereich mehrere Experten.
       |  Wir begleiten Sie von der ersten Idee bis zur Veröffentlichung.
-      |  Wir sind nicht nur irgendeine Agentur, wir machen Ihr Produkt einzigartig.
+      |  Wir verstehen uns als Teil Ihres Teams und nicht als externer Partner, der nur blind Aufgaben abarbeitet. Nur so klappt die Entwicklung digitaler Produkte.
 
 div.uk-section#beratung.n42-section-border
   .uk-container.uk-text-center
     h1 Beratung
-    p.space-xl Wir kennen die gängigen Probleme bei der Umsetzung von App-Ideen. Kunden kommen mit einer ausgearbeiteten Idee und wollen dann nur noch die Entwicklung des Produkts. Die technische Machbarkeit wird dabei oft außer Acht gelassen. Der Auslöser dafür ist meist ein zu großer Funktionsumfang, mit einem dafür zu geringen Budget, bei zu wenig Zeit.
+    p.space-xl Wir kennen die gängigen Probleme bei der Umsetzung von digitalen Produkten. Es werden häufig umfassende Konzepte an uns herangetragen, die einer großen Vision entsprechen. Die technische Machbarkeit, die Budget und Realisierungszeit (Time To Market) stark beeinflusst, wird dabei oft außer Acht gelassen. Wir unterstützen sie bereits bei der Analyse der Problemstellung dabei die technische Machbarkeit von Anfang an in das Produkt einfließen zu lassen.
 
-    .uk-grid (class="uk-child-width-1-1 uk-child-width-1-4@m")
+
+    .uk-grid (class="uk-child-width-1-1 uk-child-width-1-3@m")
       div
-        h2 Was?
-        p.uk-margin-large-bottom Sie und Ihre Idee stehen natürlich weiterhin im Mittelpunkt. Unsere Aufgabe ist es, Ihnen mit unserem technischen Verständnis unter die Arme zu greifen.
+        h2 Warum?
+        p.uk-margin-large-bottom Sie und Ihre Idee stehen weiterhin im Mittelpunkt. Unsere Aufgabe ist es, Ihnen mit unserem technischen Verständnis unter die Arme zu greifen und so in kürzester Zeit das beste aus Ihrer Idee zu machen.
+
       div
         h2 Wann?
-        p.uk-margin-large-bottom Der beste Zeitpunkt um uns zu kontaktieren ist ganz am Anfang. Denn dann können wir gemeinsam mit Ihnen an Ihrer Idee feilen und die beste Möglichkeit ausarbeiten.
+        p.uk-margin-large-bottom Der beste Zeitpunkt um mit uns zu sprechen ist bereits bei der Problemstellung und nicht erst wenn es um eine Umsetzung geht. So können wir gemeinsam mit Ihnen an Ihrem Produkt feilen und die beste Möglichkeit ausarbeiten.
 
       div
         h2 Wie?
-        p.uk-margin-large-bottom Wir bieten Ihnen einen ersten kostenlosen Workshop und eine darauf aufbauende Aufwandsschätzung. Dann erstellen wir für Sie ein unverbindliches Angebot.
+        p.uk-margin-large-bottom Wir erarbeiten gemeinsam mit Ihnen in Workshops Ihr Produktkonzept. Das Konzept besteht aus einer groben Produkt-Roadmap, die in möglichst kleinen Schritten nutzbare Zwischenergebnisse liefert. Darüberhinaus enstehen erste Entwürfe der Bedienoberflächen des Produktes als Grundlage für ein gemeinsames Produkt-Verständnis.
         / Natürlich soll Ihre App am besten alles können. Besser ist es aber zunächst in kleinen Schritten Funktionen hinzuzufügen. So kann schnell ein erstes funktionsfähiges Produkt enstehen, welches dann an die Bedürfnisse der Nutzer angepasst werden kann.
-
-      div
-        h2 Warum?
-        p.uk-margin-large-bottom Damit Sie sich viel Ärger und Zeit sparen und ein Produkt erhalten, dass auf Sie und Ihre Kunden zugeschnitten ist und auch in vollem Umfang funktioniert.
 
 
 div.uk-section.uk-section-muted#entwicklung.n42-section-border
