readd seperate sections for web and app development

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -84,10 +84,18 @@ div.uk-section#leistungen.n42-section-border
           a href="#beratung" uk-scroll='duration: 200; offset: 20'
             | Das können wir Ihnen bieten.
       div
-        span.n42-text-red uk-icon="icon: desktop; ratio: 3"
-        h2 Entwicklung
+        span.n42-text-red uk-icon="icon: phone; ratio: 3"
+        h2 Mobile Entwicklung
         p
-          | Egal ob iOS, Android oder Web, wir wissen, was Apps ausmacht – und setzen das für Sie um.
+          | Einfach bedienbar, ständig verfügbar und optimal auf den Nutzer abgestimmt. Egal ob für Smartphone oder Tablet, iOS oder Android, wir wissen, was Apps ausmacht – und setzen das auch um.
+          a href="#entwicklung" uk-scroll='duration: 200; offset: 20'
+            br
+            | Mehr über unsere Technologien und den Entwicklungsprozess.
+      div
+        span.n42-text-red uk-icon="icon: desktop; ratio: 3"
+        h2 Web Entwicklung
+        p
+          | Ob Webanwendungen mit durchdachter Usability, responsive Webseiten oder komplexe Backend-Systeme, wir finden für Sie genau die Lösung, die Sie brauchen.
           a href="#entwicklung" uk-scroll='duration: 200; offset: 20'
             br
             | Mehr über unsere Technologien und den Entwicklungsprozess.
