fix animation and margins

--- a/source/referenzen.html.slim
+++ b/source/referenzen.html.slim
@@ -8,10 +8,13 @@ preview_description:
 
 = partial 'nav'
 
-section.uk-section.uk-text-center
-  .uk-container
-    h1 Referenzen
-    p Neben dem Consulting und Coaching von Mobile-Projekten bieten wir auch Agenturleistungen. Im Folgenden finden Sie einen Auszug unserer aktuellen Projekte auf den verschiedenen Plattformen. Wir bieten eine breite Auswahl unterschiedlichster Technologien, unter anderem iOS (Swift, Objective-C), Android (Java, Kotlin), Web (Ruby on Rails, Ember) und SmartTV (Android, iOS, Javascript).
+section.uk-section
+  .uk-container.uk-container-small.n42-container
+    h1.uk-text-center Referenzen
+    div.uk-grid.uk-text-center  class="uk-visible@m"
+      p Neben dem Consulting und Coaching von Mobile-Projekten bieten wir auch Agenturleistungen. Im Folgenden finden Sie einen Auszug unserer aktuellen Projekte auf den verschiedenen Plattformen. Wir bieten eine breite Auswahl unterschiedlichster Technologien, unter anderem iOS (Swift, Objective-C), Android (Java, Kotlin), Web (Ruby on Rails, Ember) und SmartTV (Android, iOS, Javascript).
+    div.uk-grid class="uk-hidden@m"
+      p Neben dem Consulting und Coaching von Mobile-Projekten bieten wir auch Agenturleistungen. Im Folgenden finden Sie einen Auszug unserer aktuellen Projekte auf den verschiedenen Plattformen. Wir bieten eine breite Auswahl unterschiedlichster Technologien, unter anderem iOS (Swift, Objective-C), Android (Java, Kotlin), Web (Ruby on Rails, Ember) und SmartTV (Android, iOS, Javascript).
 
 
 
