--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -258,10 +258,10 @@ section.uk-section.mb0.uk-section-muted.uk-padding-remove-bottom#stacks.n42-sect
     /medium+large devices
     div.uk-flex.uk-flex-middle class="uk-visible@s"
       div.uk-width-1-2
-        div uk-scrollspy="cls: uk-animation-slide-left; repeat: true"
+        div uk-scrollspy="cls: uk-animation-slide-left;"
           img src="images/home-4.png"
       div.uk-width-1-2.uk-margin-large-left class="uk-width-1-2"
-        div uk-scrollspy="cls: uk-animation-slide-right; repeat: true"
+        div uk-scrollspy="cls: uk-animation-slide-right;"
           p
             | 42Stacks ist die Möglichkeit Ihr Produkt auf die bestmögliche Art und Weise zu präsentieren. Mit 42Stacks haben Sie zusammen mit Ihrem Smartphone jederzeit Ihr aktuelles Portfolio griffbereit und können so Ihrem Produkt immer und überall die richtige Plattform bieten.
           a href='https://42stacks.com/'
@@ -269,7 +269,7 @@ section.uk-section.mb0.uk-section-muted.uk-padding-remove-bottom#stacks.n42-sect
     /small devices
     div.uk-grid class="uk-hidden@s"
       div.uk-width-1-1.uk-text-center
-        div uk-scrollspy="cls: uk-animation-fade; repeat: true"
+        div
           p
             | 42Stacks ist die Möglichkeit Ihr Produkt auf die bestmögliche Art und Weise zu präsentieren. Mit 42Stacks haben Sie zusammen mit Ihrem Smartphone jederzeit Ihr aktuelles Portfolio griffbereit und können so Ihrem Produkt immer und überall die richtige Plattform bieten.
           a href='https://42stacks.com/'
