--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -66,39 +66,45 @@ nav.uk-navbar.uk-navbar-container.n42-navbar uk-navbar="" uk-sticky='' class="uk
 
 
 div.uk-cover-container.n42-height-large.n42-red-border.n42-hero
-  img(src="images/header.jpg" uk-cover )
-  div.uk-overlay.uk-light.n42-text-shadow-light.n42-hero-text
-    h1
-      | Die Antwort auf Ihre App-Idee.
-      br
-      | Mit Beratung zum Erfolg.
+  div#cover
+    div.uk-overlay.uk-light.n42-text-shadow-light.n42-hero-text
+      h1
+        | Die Antwort auf 
+        br
+        |Ihre App-Idee.
+        br.with_margin
+        | Mit Beratung 
+        br 
+        | zum Erfolg.
 div.uk-section#leistungen.n42-section-border
   div.uk-container
     div (class="uk-child-width-1-1 uk-child-width-1-3@m uk-grid uk-text-center uk-flex-around uk-margin-medium-top" uk-grid)
       div
-        span.n42-text-red uk-icon="icon: heart; ratio: 3"
+        
+        img.icon_quick_fix src="images/icon_bubbles_marks.svg"
         h2 Beratung
         p
           | Sie haben eine Idee für eine App, aber brauchen noch das technische Know-how?
           br
           a href="#beratung" uk-scroll='duration: 200; offset: 20'
-            | Das können wir Ihnen bieten.
+            | Das
+          |  können wir Ihnen bieten.
       div
-        span.n42-text-red uk-icon="icon: phone; ratio: 3"
+        img.icon_quick_fix src="images/icon_mobile.svg"
         h2 Mobile Entwicklung
         p
-          | Einfach bedienbar, ständig verfügbar und optimal auf den Nutzer abgestimmt. Egal ob für Smartphone oder Tablet, iOS oder Android, wir wissen, was Apps ausmacht – und setzen das auch um.
+          | Einfach bedienbar, ständig verfügbar und optimal auf den Nutzer abgestimmt. Egal ob für Smartphone oder Tablet, iOS oder Android, wir wissen, was Apps ausmacht – und setzen das auch um. 
           a href="#entwicklung" uk-scroll='duration: 200; offset: 20'
-            br
-            | Mehr über unsere Technologien und den Entwicklungsprozess.
+            | Mehr
+          |  über unsere Technologien und den Entwicklungsprozess.
       div
-        span.n42-text-red uk-icon="icon: desktop; ratio: 3"
+        img.icon_quick_fix src="images/icon_web.svg"
         h2 Web Entwicklung
         p
-          | Ob Webanwendungen mit durchdachter Usability, responsive Webseiten oder komplexe Backend-Systeme, wir finden für Sie genau die Lösung, die Sie brauchen.
+          | Ob Webanwendungen mit durchdachter Usability, responsive Webseiten oder komplexe Backend-Systeme, wir finden für Sie genau die Lösung, die Sie brauchen. 
           a href="#entwicklung" uk-scroll='duration: 200; offset: 20'
-            br
-            | Mehr über unsere Technologien und den Entwicklungsprozess.
+            | Mehr
+          |  über unsere Technologien und den Entwicklungsprozess.
 
 div.uk-section.uk-section-muted#team.n42-section-border
   div.uk-container
