fix media queries

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -70,11 +70,11 @@ div.uk-cover-container.n42-height-large.n42-red-border.n42-hero
     div.uk-overlay.uk-light.n42-text-shadow-light.n42-hero-text
       h1
         | Die Antwort auf 
-        br
+        br class="uk-hidden@s"
         |Ihre App-Idee.
         br.with_margin
         | Mit Beratung 
-        br 
+        br class="uk-hidden@s"
         | zum Erfolg.
 div.uk-section#leistungen.n42-section-border
   div.uk-container
