remove jobs from index.html

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -300,16 +300,8 @@ section.uk-section.mb0.uk-section-muted.uk-padding-remove-bottom#stacks.n42-sect
     div.uk-width-1-1 uk-scrollspy="cls: uk-animation-fade; repeat: true"
       img src="images/home-4.png" class="uk-hidden@s"
 
-div.uk-section#jobs.n42-section-border
-  .uk-container.uk-text-center
-    h1 Jobs
-    p
-      |Im Moment haben wir keine Stellen ausgeschrieben.
-      br
-      |Wir freuen uns dennoch über Initiativbewerbungen oder ein einfaches "Hi, hier bin ich".
 
-
-section.uk-section.uk-text-center#kontakt.n42-section-border.uk-section-muted
+section.uk-section.uk-text-center#kontakt.n42-section-border
   div.uk-container.uk-container-small.n42-container
     h1.n42-section-header Kontakt
     div.uk-margin
