--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -22,7 +22,7 @@ html lang="en" prefix="og: http://ogp.me/ns#"
       = yield
 
       footer.n42-footer
-        div.uk-section.uk-text-center
+        div.uk-section.uk-text-center.uk-section-muted
          div.uk-container.uk-margin-top
             p
               = link_to "Impressum", "imprint.html"
