--- a/assets/stylesheets/font.css
+++ b/assets/stylesheets/font.css
@@ -165,7 +165,7 @@
   url('/fonts/Roboto/Roboto-Regular.woff') format('woff'),
   url('/fonts/Roboto/Roboto-Regular.ttf') format('truetype'),
   url('/fonts/Roboto/Roboto-Regular.svg#Roboto-Regular') format('svg');
-  font-weight: normal;
+  font-weight: 400;
   font-style: normal;
 }
 @font-face {
@@ -175,7 +175,7 @@
   url('/fonts/Roboto/Roboto-Regular.woff') format('woff'),
   url('/fonts/Roboto/Roboto-Regular.ttf') format('truetype'),
   url('/fonts/Roboto/Roboto-Regular.svg#Roboto-Regular') format('svg');
-  font-weight: normal;
+  font-weight: 400;
   font-style: normal;
 }
 
@@ -187,6 +187,28 @@
         url('/fonts/Roboto/Roboto-Light.woff') format('woff'),
         url('/fonts/Roboto/Roboto-Light.ttf') format('truetype'),
         url('/fonts/Roboto/Roboto-Light.svg#Roboto-Light') format('svg');
+    font-weight: 300;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Roboto-Medium';
+    src: url('/fonts/Roboto/Roboto-Medium.eot');
+    src: url('/fonts/Roboto/Roboto-Medium.eot?#iefix') format('embedded-opentype'),
+        url('/fonts/Roboto/Roboto-Medium.woff') format('woff'),
+        url('/fonts/Roboto/Roboto-Medium.ttf') format('truetype'),
+        url('/fonts/Roboto/Roboto-Medium.svg#Roboto-Medium') format('svg');
+    font-weight: 500;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'RobotoSlab-Light';
+    src: url('/fonts/RobotoSlab/robotoslab-light.eot');
+    src: url('/fonts/RobotoSlab/robotoslab-light.eot?#iefix') format('embedded-opentype'),
+        url('/fonts/RobotoSlab/robotoslab-light.woff') format('woff'),
+        url('/fonts/RobotoSlab/robotoslab-light.ttf') format('truetype'),
+        url('/fonts/RobotoSlab/robotoslab-light.svg#robotoslab-light') format('svg');
     font-weight: 300;
     font-style: normal;
 }
