--- a/source/blog/index.html.slim
+++ b/source/blog/index.html.slim
@@ -14,9 +14,10 @@ div.uk-container.n42-blog
       - blog.articles.each do |article|
         div.article-snippet.uk-margin-large-bottom
           h2.uk-margin-remove-bottom = link_to article.title, article
-          p.uk-margin-remove-top.uk-margin-small-bottom = article.date.strftime('%b %e, %Y')
+          p.uk-margin-remove-top.uk-margin-remove-bottom.time = article.date.strftime('%b %e, %Y')
           = link_to article do
-            = article.data['summary']
+            p
+              = article.data['summary']
 
     / - if paginate && num_pages > 1
     /   p Page #{page_number} of #{num_pages}
