fix some styling issues

--- a/source/jobs.html.slim
+++ b/source/jobs.html.slim
@@ -11,7 +11,7 @@ preview_description: Du interessierst dich für Design oder Wirtschaft und suchs
 
 section.uk-section uk-height-viewport='offset-top: true; offset-bottom: true;'
   div.uk-container.uk-text-center
-    h1 Stellenausschreibungen
+    h1 Jobs
     img.uk-width-1-2(src="images/WirSuchenDich.svg")
     div.uk-text-left.uk-margin-large-top
       = partial "jobs_empty"
