fix margins to icons

--- a/assets/stylesheets/all.scss
+++ b/assets/stylesheets/all.scss
@@ -9,6 +9,10 @@
 
 $red-color: #D24335;
 
+#leistungen { h2 { margin-top: 15px !important; } }
+.mt0 {
+  margin-top: 0 !important;
+}
 a:active, a:hover {
   color: #D24335 !important;
 }
