--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -63,33 +63,39 @@ div.uk-cover-container.n42-height-large.n42-red-border.n42-hero
         | zum Erfolg.
 div.uk-section#leistungen.n42-section-border
   div.uk-container
-    div (class="uk-child-width-1-1 uk-child-width-1-3@m uk-grid uk-text-center uk-flex-around uk-margin-medium-top" uk-grid)
+    div (class="uk-child-width-1-1 uk-child-width-1-3@m uk-grid uk-text-center uk-flex-around" uk-grid)
       div
         
         img.icon_quick_fix src="images/icon_bubbles_marks.svg"
         h2 Beratung
         p
-          | Sie haben eine Idee für eine App, aber brauchen noch das technische Know-how?
-          br
-          a href="#beratung" uk-scroll='duration: 200; offset: 20'
-            | Das
-          |  können wir Ihnen bieten.
+          | Sie haben eine Idee für eine App, aber brauchen noch das technische Know-how? Wir helfen Ihnen.
+        div class="uk-hidden@m"
+          a href="#beratung" uk-scroll='duration: 200; offset: 50'
+            button.uk-button.uk-button-primary.uk-margin.uk-button-large Mehr erfahren
       div
         img.icon_quick_fix src="images/icon_mobile.svg"
         h2 Mobile Entwicklung
         p
           | Einfach bedienbar, ständig verfügbar und optimal auf den Nutzer abgestimmt. Egal ob für Smartphone oder Tablet, iOS oder Android, wir wissen, was Apps ausmacht – und setzen das auch um. 
-          a href="#entwicklung" uk-scroll='duration: 200; offset: 20'
-            | Mehr
-          |  über unsere Technologien und den Entwicklungsprozess.
+        div class="uk-hidden@m"
+          a href="#entwicklung" uk-scroll='duration: 200; offset: 50'
+            button.uk-button.uk-button-primary.uk-margin.uk-button-large Mehr erfahren
       div
         img.icon_quick_fix src="images/icon_web.svg"
         h2 Web Entwicklung
         p
           | Ob Webanwendungen mit durchdachter Usability, responsive Webseiten oder komplexe Backend-Systeme, wir finden für Sie genau die Lösung, die Sie brauchen. 
-          a href="#entwicklung" uk-scroll='duration: 200; offset: 20'
-            | Mehr
-          |  über unsere Technologien und den Entwicklungsprozess.
+        div class="uk-hidden@m"
+          a href="#entwicklung" uk-scroll='duration: 200; offset: 50'
+            button.uk-button.uk-button-primary.uk-margin.uk-button-large Mehr erfahren
+    div.mt0 (class="uk-child-width-1-1 uk-child-width-1-3@m uk-grid uk-text-center uk-flex-around uk-visible@m" )
+      a href="#beratung" uk-scroll='duration: 200; offset: 50'
+        button.uk-button.uk-button-primary.uk-margin.uk-button-large Mehr erfahren
+      a href="#entwicklung" uk-scroll='duration: 200; offset: 50'
+        button.uk-button.uk-button-primary.uk-margin.uk-button-large Mehr erfahren
+      a href="#entwicklung" uk-scroll='duration: 200; offset: 50'
+        button.uk-button.uk-button-primary.uk-margin.uk-button-large Mehr erfahren
 
 div.uk-section.uk-section-muted#team.n42-section-border
   div.uk-container
