improve jobs footer

--- a/source/_jobs_footer.html.slim
+++ b/source/_jobs_footer.html.slim
@@ -8,6 +8,13 @@
     = mail_to "jobs@num42.de"
 
   p
-    |Number42 GmbH・Franz-Mayer-Straße 1・93053 Regensburg
+    |Number42 GmbH
     br
-    |www.number42.de・Telefon: +49 941 / 20 00 08 70
+    |Franz-Mayer-Straße 1
+    br
+    |93053 Regensburg
+    br
+    br
+    |www.number42.de
+    br
+    |Telefon: +49 941 / 20 00 08 70
