banner text is not selectable anymore

--- a/assets/stylesheets/all.scss
+++ b/assets/stylesheets/all.scss
@@ -9,6 +9,16 @@
 
 $red-color: #D24335;
 
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
+}
+
 #leistungen { h2 { margin-top: 15px !important; } }
 .mt0 {
   margin-top: 0 !important;
