--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -53,7 +53,7 @@ nav.uk-navbar.uk-navbar-container.n42-navbar uk-navbar='' uk-sticky=''
 div.uk-cover-container.n42-height-large.n42-red-border.n42-hero
   div#cover
     div.uk-overlay.uk-light.n42-text-shadow-light.n42-hero-text
-      h1
+      h1.noselect
         | Die Antwort auf 
         br class="uk-hidden@s"
         |Ihre App-Idee.
