clean up src folder

--- a/source/referenzen.html.slim
+++ b/source/referenzen.html.slim
@@ -31,7 +31,7 @@ section.uk-section.uk-section-muted.n42-section-border
             |erhalten.
 
       div.uk-width-1-2 uk-scrollspy="cls: uk-animation-slide-right;"
-        =image_tag "images/fwu.png"
+        =image_tag "images/fwu_min.png"
 
     div class="uk-hidden@s"
           div.uk-width-1-1 uk-scrollspy="cls: uk-animation-fade; repeat: true"
@@ -43,7 +43,7 @@ section.uk-section.uk-section-muted.n42-section-border
                   |erhalten.
 
           div.uk-container.uk-container-small.n42-container.uk-width-1-1 uk-scrollspy="cls: uk-animation-fade; repeat: true"
-            =image_tag "images/fwu.png"
+            =image_tag "images/fwu_min.png"
 
 section.uk-section.n42-section-border
   div.uk-container.uk-container-small.n42-container
