--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -1,6 +1,6 @@
 ---
 title: Number42
-preview_image: images/cover_s.jpg
+preview_image: images/og_image.png
 preview_description: Wir sind Entwickler aus Leidenschaft. Für uns ist die Entwicklung von Web- und Mobile-Anwendungen nicht nur unser Beruf, sondern unsere Berufung. Wenn wir zusammen Ihre Idee entwicklen fühlen wir uns wie Erfinder, wenn wir dabei mit den neuesten Technologien programmieren wie Ingenieure und wenn wir Ihrem Produkt ein unverkennbares Design verpassen wie Künstler. Wir begleiten Sie von der ersten Idee bis zur Veröffentlichung. Wir sind nicht nur irgendeine Agentur, wir machen Ihr Produkt einzigartig.
 ---
 
@@ -202,7 +202,7 @@ div.uk-section.uk-section-muted#team.n42-section-border
 div.uk-section#beratung.n42-section-border
   .uk-container.uk-text-center
     h1 Beratung
-    p.space-xl Wir kennen die gängigen Probleme bei der Umsetzung von digitalen Produkten. Es werden häufig umfassende Konzepte an uns herangetragen, die einer großen Vision entsprechen. Die technische Machbarkeit, die Budget und Realisierungszeit (Time To Market) stark beeinflusst, wird dabei oft außer Acht gelassen. Wir unterstützen sie bereits bei der Analyse der Problemstellung dabei die technische Machbarkeit von Anfang an in das Produkt einfließen zu lassen.
+    p.space-xl Wir kennen die gängigen Probleme bei der Umsetzung von digitalen Produkten. Es werden häufig umfassende Konzepte an uns herangetragen, die einer großen Vision entsprechen. Die technische Machbarkeit, die Budget und Realisierungszeit stark beeinflusst, wird dabei oft außer Acht gelassen. Wir unterstützen sie bereits bei der Analyse der Problemstellung dabei die technische Machbarkeit von Anfang an in das Produkt einfließen zu lassen.
 
 
     .uk-grid (class="uk-child-width-1-1 uk-child-width-1-3@m")
