--- a/assets/stylesheets/blog.scss
+++ b/assets/stylesheets/blog.scss
@@ -8,7 +8,7 @@
     font-size: 4em;
   }
 
-  p{
+  p,li{
     color: black;
     font-size: 1.2em;
     &.time{
@@ -53,7 +53,7 @@
     font-size: 1.4em;
   }
 
-  p{
+  p,li{
     font-family: "RobotoSlab-Light", serif;
     font-weight: 300;
     margin-top: 0.2em;
@@ -66,8 +66,8 @@
     color: #666;
   }
   strong{
-    font-family: "Roboto-Regular", sans-serif;
-    font-weight: normal;
+    font-family: "RobotoSlab-light", sans-serif;
+    font-weight: 600;
   }
   em{
     color: black;
