--- a/source/blog/index.html.slim
+++ b/source/blog/index.html.slim
@@ -12,11 +12,12 @@ div.uk-container.n42-blog
 
       - blog.articles.each do |article|
         div.article-snippet.uk-margin-large-bottom
-          div.uk-cover-container
-            canvas width="400" height="200"
-            img src="/blog/articles/#{article.data['headerImage']}" uk-cover=''
-          h2.uk-margin-remove-bottom.uk-margin-small-top = link_to article.title, article
-          p.uk-margin-remove-top.uk-margin-remove-bottom.time = article.date.strftime('%b %e, %Y')
           = link_to article do
-            p
-              = article.data['summary']
+            div.uk-cover-container
+              canvas width="400" height="200"
+              img src="/blog/articles/#{article.data['headerImage']}" uk-cover=''
+            h2.uk-margin-remove-bottom.uk-margin-small-top = link_to article.title, article
+            p.uk-margin-remove-top.uk-margin-remove-bottom.time = article.date.strftime('%b %e, %Y')
+            = link_to article do  
+              p
+                = article.data['summary']
