fix blog for phone

--- a/assets/stylesheets/all.scss
+++ b/assets/stylesheets/all.scss
@@ -11,6 +11,10 @@
 
 $red-color: #D24335;
 
+.mt10 {
+  margin-top: 6.5em;
+}
+
 .noselect {
   -webkit-touch-callout: none; /* iOS Safari */
     -webkit-user-select: none; /* Safari */
