--- a/source/layouts/article_layout.slim
+++ b/source/layouts/article_layout.slim
@@ -2,5 +2,5 @@
     = partial "nav"
     div.uk-container.uk-margin-large-top.uk-margin-bottom
       div.uk-flex-center uk-grid=''
-        div.uk-width-2-3.n42-article
+        div.n42-article class="uk-width-2-3@l uk-width-1-1"
           = yield
