--- a/source/layouts/article_layout.slim
+++ b/source/layouts/article_layout.slim
@@ -1,6 +1,8 @@
 = wrap_layout :layout do
     = partial "nav"
-    div.uk-container.uk-margin-large-top.uk-margin-bottom
+    div.uk-container.uk-margin-top.uk-margin-bottom
       div.uk-flex-center uk-grid=''
-        div.n42-article class="uk-width-2-3@l uk-width-1-1"
+        div.n42-article class="uk-width-2-3@l uk-width-3-4@m uk-width-4-5@s uk-width-1-1"
+          =link_to 'back to overview', '/blog/index.htm'
           = yield
+          =link_to 'back to overview', '/blog/index.htm'
