--- a/source/layouts/article_layout.slim
+++ b/source/layouts/article_layout.slim
@@ -4,5 +4,6 @@
       div.uk-flex-center uk-grid=''
         div.n42-article class="uk-width-2-3@l uk-width-3-4@m uk-width-4-5@s uk-width-1-1"
           =link_to 'back to overview', '/blog/index.htm'
+          div.uk-margin-medium-bottom
           = yield
           =link_to 'back to overview', '/blog/index.htm'
