--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -206,7 +206,7 @@ div.uk-section.uk-section-muted#team.n42-section-border
 div.uk-section#beratung.n42-section-border
   .uk-container.uk-text-center
     h1 Beratung
-    p.space-xl Wir kennen die gängigen Probleme bei der Umsetzung von digitalen Produkten. Es werden häufig umfassende Konzepte an uns herangetragen, die einer großen Vision entsprechen. Die technische Machbarkeit, das Budget und die Realisierungszeit stark beeinflusst, wird dabei oft außer Acht gelassen. Wir unterstützen Sie bereits bei der Analyse der Problemstellung dabei, die technische Machbarkeit von Anfang an in das Produkt einfließen zu lassen.
+    p.space-xl Wir kennen die gängigen Probleme bei der Umsetzung von digitalen Produkten. Es werden häufig umfassende Konzepte an uns herangetragen, die einer großen Vision entsprechen. Das die technische Machbarkeit, das Budget und die Realisierungszeit den Projekterfolg stark beeinflussen, wird dabei oft außer Acht gelassen. Wir unterstützen Sie bereits bei der Analyse der Problemstellung dabei, die technische Machbarkeit von Anfang an in das Produkt einfließen zu lassen.
 
 
     .uk-grid (class="uk-child-width-1-1 uk-child-width-1-3@m")
