--- a/source/_nav.html.slim
+++ b/source/_nav.html.slim
@@ -1,11 +1,11 @@
 nav.uk-navbar.uk-navbar-container.n42-navbar.n42-mobile-nav uk-navbar='' uk-sticky=''
   div.uk-navbar-left
-    = link_to 'index.html', class:'uk-navbar-item uk-logo' do
+    = link_to '/index.html', class:'uk-navbar-item uk-logo' do
       = image_tag 'logo.svg', style:'width: 120px'
-  
+
   div.uk-navbar-right class="uk-hidden@m"
     a class="uk-navbar-toggle uk-navbar-toggle-icon" uk-toggle="" uk-navbar-toggle-icon=true href="#offcanvas-slide"
-  
+
   div.uk-navbar-right class="uk-visible@m"
     ul.uk-nav.uk-navbar-nav#nav
       li
