--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -212,7 +212,7 @@ div.uk-section#beratung.n42-section-border
     .uk-grid (class="uk-child-width-1-1 uk-child-width-1-3@m")
       div
         h2 Warum?
-        p.uk-margin-large-bottom Sie und Ihre Idee stehen weiterhin im Mittelpunkt. Unsere Aufgabe ist es, Ihnen mit unserem technischen Verständnis unter die Arme zu greifen und so in kürzester Zeit das beste aus Ihrer Idee zu machen.
+        p.uk-margin-large-bottom Sie und Ihre Idee stehen weiterhin im Mittelpunkt. Unsere Aufgabe ist es, Ihnen mit unserem technischen Verständnis unter die Arme zu greifen und so in kürzester Zeit das Beste aus Ihrer Idee zu machen.
 
       div
         h2 Wann?
