“Darüberhinaus enstehen” -> “Darüber hinaus entstehen”

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -220,7 +220,7 @@ div.uk-section#beratung.n42-section-border
 
       div
         h2 Wie?
-        p.uk-margin-large-bottom Wir erarbeiten gemeinsam mit Ihnen in Workshops Ihr Produktkonzept. Das Konzept besteht aus einer groben Produkt-Roadmap, die in möglichst kleinen Schritten nutzbare Zwischenergebnisse liefert. Darüberhinaus enstehen erste Entwürfe der Bedienoberflächen des Produktes als Grundlage für ein gemeinsames Produkt-Verständnis.
+        p.uk-margin-large-bottom Wir erarbeiten gemeinsam mit Ihnen in Workshops Ihr Produktkonzept. Das Konzept besteht aus einer groben Produkt-Roadmap, die in möglichst kleinen Schritten nutzbare Zwischenergebnisse liefert. Darüber hinaus entstehen erste Entwürfe der Bedienoberflächen des Produktes als Grundlage für ein gemeinsames Produkt-Verständnis.
         / Natürlich soll Ihre App am besten alles können. Besser ist es aber zunächst in kleinen Schritten Funktionen hinzuzufügen. So kann schnell ein erstes funktionsfähiges Produkt enstehen, welches dann an die Bedürfnisse der Nutzer angepasst werden kann.
 
 
