different nav size fixed

--- a/source/_nav.html.slim
+++ b/source/_nav.html.slim
@@ -1,4 +1,4 @@
-nav.uk-navbar.uk-navbar-container.n42-navbar.n42-mobile-nav uk-navbar='' uk-sticky=''
+nav.uk-navbar.uk-navbar-container.n42-navbar uk-navbar='' uk-sticky=''
   div.uk-navbar-left
     = link_to '/index.html', class:'uk-navbar-item uk-logo' do
       = image_tag 'logo.svg', style:'width: 120px'
