added opengraph metadata for facebook

--- a/source/blog/index.html.slim
+++ b/source/blog/index.html.slim
@@ -15,9 +15,9 @@ div.uk-container.n42-blog
           = link_to article do
             div.uk-cover-container
               canvas width="400" height="200"
-              img src="/blog/articles/#{article.data['headerImage']}" uk-cover=''
+              img src="#{article.data['preview_image']}" uk-cover=''
             h2.uk-margin-remove-bottom.uk-margin-small-top = link_to article.title, article
             p.uk-margin-remove-top.uk-margin-remove-bottom.time = article.date.strftime('%b %e, %Y')
             = link_to article do
               p
-                = article.data['summary']
+                = article.data['preview_description']
