fixed ugly article urls

--- a/source/layouts/article_layout.slim
+++ b/source/layouts/article_layout.slim
@@ -3,7 +3,7 @@
     div.uk-container.uk-margin-top.uk-margin-bottom
       div.uk-flex-center uk-grid=''
         div.n42-article class="uk-width-2-3@l uk-width-3-4@m uk-width-4-5@s uk-width-1-1"
-          =link_to 'back to overview', '/blog/index.htm'
+          =link_to 'back to overview', '/blog/index.html'
           div.uk-margin-medium-bottom
           = yield
-          =link_to 'back to overview', '/blog/index.htm'
+          =link_to 'back to overview', '/blog/index.html'
