--- a/source/_nav.html.slim
+++ b/source/_nav.html.slim
@@ -33,9 +33,9 @@ nav.uk-navbar.uk-navbar-container.n42-navbar uk-navbar='' uk-sticky=''
       li
         = link_to '42Stacks', "/#stacks"
       li
-        = link_to "Referenzen", "referenzen.html"
+        = link_to "Referenzen", "/referenzen.html"
       li
-        = link_to "Jobs", "jobs.html"
+        = link_to "Jobs", "/jobs.html"
       li
         = link_to "Blog", "/blog/index.html"
       li
