add case studies

--- a/assets/stylesheets/all.scss
+++ b/assets/stylesheets/all.scss
@@ -15,6 +15,10 @@ $red-color: #D24335;
   margin-top: 6.5em;
 }
 
+.center {
+  margin: 0 auto !important;
+}
+
 .noselect {
   -webkit-touch-callout: none; /* iOS Safari */
     -webkit-user-select: none; /* Safari */
