--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -24,7 +24,7 @@ nav.uk-navbar.uk-navbar-container.n42-navbar uk-navbar='' uk-sticky=''
         a href="#stacks" uk-scroll='duration: 300; offset: 50'
           | 42Stacks
       li
-        = link_to "Referenzen", "referenzen.html"
+        = link_to "Referenzen", "/referenzen.html"
       li
         = link_to "Jobs", "jobs.html"
       li
@@ -45,7 +45,7 @@ nav.uk-navbar.uk-navbar-container.n42-navbar uk-navbar='' uk-sticky=''
         a href="#stacks" uk-scroll='duration: 300; offset: 50'
           | 42Stacks
       li
-        = link_to "Referenzen", "referenzen.html"
+        = link_to "Referenzen", "/referenzen.html"
       li
         = link_to "Jobs", "jobs.html"
       li
