--- a/source/referenzen.html.slim
+++ b/source/referenzen.html.slim
@@ -29,18 +29,23 @@ section.uk-section.uk-section-muted.n42-section-border
             |In diesem Projekt für das FWU wurde das erste digitale Schulbuch in Deutschland veröffentlicht. Die technische Umsetzung beinhaltet ein Content-Management-System für den Verlag, um multimediale Inhalte einzupflegen und zu bearbeiten. Zudem wurden Reader Apps für iOS und Android entwickelt, über welche die Schüler und Lehrer das interaktive Buch nutzen können. 2016 hat dieses Projekt den
             = link_to " Digita - Deutscher Medien Bildungspreis ", "https://www.digita.de/2016/sieg_2016.htm"
             |erhalten.
+          a href="/case_studies/fwu.html"
+            button.uk-button.uk-button-primary.uk-margin.uk-button-large Mehr erfahren
 
       div.uk-width-1-2 uk-scrollspy="cls: uk-animation-slide-right;"
         =image_tag "images/fwu_min.png"
 
     div class="uk-hidden@s"
           div.uk-width-1-1 uk-scrollspy="cls: uk-animation-fade; repeat: true"
-              .uk-text-left
-                h2 BioBook NRW
-                p
-                  |In diesem Projekt für das FWU wurde das erste digitale Schulbuch in Deutschland veröffentlicht. Die technische Umsetzung beinhaltet ein Content-Management-System für den Verlag, um multimediale Inhalte einzupflegen und zu bearbeiten. Zudem wurden Reader Apps für iOS und Android entwickelt, über welche die Schüler und Lehrer das interaktive Buch nutzen können. 2016 hat dieses Projekt den
-                  = link_to " Digita - Deutscher Medien Bildungspreis ", "https://www.digita.de/2016/sieg_2016.htm"
-                  |erhalten.
+            .uk-text-left
+              h2 BioBook NRW
+              p
+                |In diesem Projekt für das FWU wurde das erste digitale Schulbuch in Deutschland veröffentlicht. Die technische Umsetzung beinhaltet ein Content-Management-System für den Verlag, um multimediale Inhalte einzupflegen und zu bearbeiten. Zudem wurden Reader Apps für iOS und Android entwickelt, über welche die Schüler und Lehrer das interaktive Buch nutzen können. 2016 hat dieses Projekt den
+                = link_to " Digita - Deutscher Medien Bildungspreis ", "https://www.digita.de/2016/sieg_2016.htm"
+                |erhalten.
+          div.uk-width-1-1
+            a.center href="/case_studies/fwu.html"
+              button.uk-button.uk-button-primary.uk-margin.uk-button-large Mehr ERFAHREN
 
           div.uk-container.uk-container-small.n42-container.uk-width-1-1 uk-scrollspy="cls: uk-animation-fade; repeat: true"
             =image_tag "images/fwu_min.png"
@@ -59,7 +64,7 @@ section.uk-section.n42-section-border
             |Der international agierende Landmaschinenhersteller Horsch suchte nach einer Lösung, um sich und seine Produkte auf Messen optimal präsentieren zu können. Für diesen Anwendungsfall ist unser
             = link_to " 42Stacks", "https://www.42stacks.de"
             |-Katalogsystem die perfekte Lösung. Die Mehrsprachigkeit und die Darstellung der Produktvielfalt waren von besonderer Wichtigkeit. Die App umfasst zu jeder Maschine die Vorteile, technischen Daten, sowie Bildergalerien und Videos in einer Vielzahl von Sprachen.
-
+  
     div class="uk-hidden@s"
           div.uk-width-1-1 uk-scrollspy="cls: uk-animation-fade; repeat: true"
               .uk-text-left
@@ -133,7 +138,8 @@ section.uk-section.uk-section-muted.n42-section-border
           h2 Save.TV
           p
             |Beim digitalen Videorekorder Save.TV übernahmen wir die Neu- und Weiterentwicklung der iOS App und sämtlicher SmartTV Anwendungen (Fire-TV, Android-TV, Apple TV, HTML5, Tizen). Durch die Breite an Plattformen sind bei Save.TV gemeinsamer Code und stetige Weiterentwicklung von besonderer Wichtigkeit. So können schnell Features und Updates für die große Zahl an Nutzern veröffentlicht werden.
-
+          a href="/case_studies/savetv.html"
+            button.uk-button.uk-button-primary.uk-margin.uk-button-large Mehr erfahren
       div.uk-width-1-2 uk-scrollspy="cls: uk-animation-slide-right;"
         =image_tag "images/saveTV_min.png"
 
@@ -143,7 +149,8 @@ section.uk-section.uk-section-muted.n42-section-border
           h2 Save.TV
           p
             |Beim digitalen Videorekorder Save.TV übernahmen wir die Neu- und Weiterentwicklung der iOS App und sämtlicher SmartTV Anwendungen (Fire-TV, Android-TV, Apple TV, HTML5, Tizen). Durch die Breite an Plattformen sind bei Save.TV gemeinsamer Code und stetige Weiterentwicklung von besonderer Wichtigkeit. So können schnell Features und Updates für die große Zahl an Nutzern veröffentlicht werden.
-
+          a href="/case_studies/savetv.html"
+            button.uk-button.uk-button-primary.uk-margin.uk-button-large Mehr erfahren
       div.uk-container.uk-container-small.n42-container.uk-width-1-1 uk-scrollspy="cls: uk-animation-fade; repeat: true"
         =image_tag "images/saveTV_min.png"
 
