--- a/source/layouts/article_layout.slim
+++ b/source/layouts/article_layout.slim
@@ -6,17 +6,28 @@
           =link_to 'back to overview', '/blog/index.html'
           div.uk-margin-medium-bottom
           = yield
-  
+
     div.uk-section
       div.uk-container.uk-container-small
         div.uk-grid-match uk-grid=''
-            - blog.articles[0...3].each do |article|
-              div class="uk-width-1-3@s uk-width-1-1"
+          / - blog.articles[0...3].each do |article|
+          - randomArticles(blog.articles, current_article).each do |article|
+            div class="uk-width-1-3@s uk-width-1-1"
+              = link_to article do
                 div.n42-article-card
-                  = link_to article do
-                    div.uk-cover-container
-                      canvas width="300" height="150"
-                      img src="#{article.data['preview_image']}" uk-cover=''
+                  div.uk-cover-container
+                    canvas width="300" height="150"
+                    img src="#{article.data['preview_image']}" uk-cover=''
                   div.n42-card-body
+                    h3.uk-margin-small-top = truncate(article.title, :length => 50)
                     p.uk-margin-remove-bottom = article.date.strftime('%b %e, %Y')
-                    h3.uk-margin-small-top = link_to truncate(article.title, :length => 70), article
+
+          div class="uk-width-1-3@s uk-width-1-1"
+            a href="#"
+              div.n42-article-card
+                  div.uk-cover-container
+                    canvas width="300" height="150"
+                    img src="/images/42.svg" uk-cover=''
+                  div.n42-card-body
+                    h3.uk-margin-small-top if you are interested build stuff contact us
+                    p.uk-margin-remove-bottom info@num.de
