uniform iOS-App instead of “iOS App”

--- a/source/referenzen.html.slim
+++ b/source/referenzen.html.slim
@@ -137,7 +137,7 @@ section.uk-section.uk-section-muted.n42-section-border
         div.uk-text-left
           h2 Save.TV
           p
-            |Beim digitalen Videorekorder Save.TV übernahmen wir die Neu- und Weiterentwicklung der iOS App und sämtlicher SmartTV Anwendungen (FireTV, AndroidTV, Apple TV, HTML5, Tizen). Durch die Breite an Plattformen sind bei Save.TV gemeinsamer Code und stetige Weiterentwicklung von besonderer Wichtigkeit. So können schnell Features und Updates für die große Zahl an Nutzern veröffentlicht werden.
+            |Beim digitalen Videorekorder Save.TV übernahmen wir die Neu- und Weiterentwicklung der iOS-App und sämtlicher SmartTV Anwendungen (FireTV, AndroidTV, Apple TV, HTML5, Tizen). Durch die Breite an Plattformen sind bei Save.TV gemeinsamer Code und stetige Weiterentwicklung von besonderer Wichtigkeit. So können schnell Features und Updates für die große Zahl an Nutzern veröffentlicht werden.
           a href="/case_studies/savetv.html"
             button.uk-button.uk-button-primary.uk-margin.uk-button-large Mehr erfahren
       div.uk-width-1-2 uk-scrollspy="cls: uk-animation-slide-right;"
@@ -148,7 +148,7 @@ section.uk-section.uk-section-muted.n42-section-border
         div.uk-text-left
           h2 Save.TV
           p
-            |Beim digitalen Videorekorder Save.TV übernahmen wir die Neu- und Weiterentwicklung der iOS App und sämtlicher SmartTV Anwendungen (FireTV, AndroidTV, Apple TV, HTML5, Tizen). Durch die Breite an Plattformen sind bei Save.TV gemeinsamer Code und stetige Weiterentwicklung von besonderer Wichtigkeit. So können schnell Features und Updates für die große Zahl an Nutzern veröffentlicht werden.
+            |Beim digitalen Videorekorder Save.TV übernahmen wir die Neu- und Weiterentwicklung der iOS-App und sämtlicher SmartTV Anwendungen (FireTV, AndroidTV, Apple TV, HTML5, Tizen). Durch die Breite an Plattformen sind bei Save.TV gemeinsamer Code und stetige Weiterentwicklung von besonderer Wichtigkeit. So können schnell Features und Updates für die große Zahl an Nutzern veröffentlicht werden.
           a href="/case_studies/savetv.html"
             button.uk-button.uk-button-primary.uk-margin.uk-button-large Mehr erfahren
       div.uk-container.uk-container-small.n42-container.uk-width-1-1 uk-scrollspy="cls: uk-animation-fade; repeat: true"
