--- a/source/case_studies/fwu.html.slim
+++ b/source/case_studies/fwu.html.slim
@@ -1,22 +1,15 @@
 = partial 'case_studies_head'
   h1 FWU BioBook
   p
-    |Das Institut für Film und Bild in Wissenschaft und Unterricht (FWU) unterstützt in verschiedenen Rollen den
-    | Medieneinsatz an deutschen Schulen. Um auch im digitalen Bereich ihr Portfolio erweitern zu können, wurde
-    | für das Land NRW ein digitales Schulbuch entwickelt. NRW versucht, eine Vorreiterrolle in der Digitalisierung
-    | der Schulbildung einzunehmen [
+    |Das Institut für Film und Bild in Wissenschaft und Unterricht (FWU) unterstützt in verschiedenen Rollen den Medieneinsatz an deutschen Schulen. Um auch im digitalen Bereich ihr Portfolio erweitern zu können, wurde für das Land NRW ein digitales Schulbuch entwickelt. NRW versucht, eine Vorreiterrolle in der Digitalisierung der Schulbildung einzunehmen [
     = link_to "1", "https://www.land.nrw/de/pressemitteilung/landesregierung-und-kommunen-staerken-das-lernen-mit-digitalen-medien"
     |,
     = link_to "2", "https://www.land.nrw/de/pressemitteilung/leitbild-lernen-im-digitalen-wandel"
-    |]. Dazu wurden unter anderem zwei digitale Schulbuch-Projekte ins Leben
-    | gerufen: Das FWU BioBook und das mBook Geschichte. Das FWU BioBook wurde von Number42 umgesetzt.
-    | Die Wichtigkeit der Digitalisierung von Lehrmaterialien hat auch die damalige Ministerpräsidentin
-    | Hannelore Kraft erkannt und deswegen das BioBook in ihrer Regierungserklärung erwähnt.
+    |]. Dazu wurden unter anderem zwei digitale Schulbuch-Projekte ins Leben gerufen: Das FWU BioBook und das mBook Geschichte. Das FWU BioBook wurde von Number42 umgesetzt. Die Wichtigkeit der Digitalisierung von Lehrmaterialien hat auch die damalige Ministerpräsidentin Hannelore Kraft erkannt und deswegen das BioBook in ihrer Regierungserklärung erwähnt.
 
   h2 Die Herausforderung
   p
-    |Es gibt bereits einige Lösungen für die Erstellung und Nutzung digitaler Medieninhalte. Diese Lösungen sind allerdings meist sehr komplex und umfangreich. Dies ist oft den hohen und vielfältigen Anforderungen an derartige Software geschuldet.
-    | Unsere Aufgabe war es, eine einfache, flexible und vor allem auch zukunftssichere Lösung zu schaffen. Allerdings waren auch hier die Anforderungen an die Software nicht trivial. Neue Inhalte müssen einfach und schnell eingebunden werden. Bücher müssen auf allen gängigen Geräten nutzbar sein. Und falls in manchen Klassenzimmern die Internetverbindung schlecht ist, muss auch hierfür eine Lösung gefunden werden.
+    |Es gibt bereits einige Lösungen für die Erstellung und Nutzung digitaler Medieninhalte. Diese Lösungen sind allerdings meist sehr komplex und umfangreich. Dies ist oft den hohen und vielfältigen Anforderungen an derartige Software geschuldet. Unsere Aufgabe war es, eine einfache, flexible und vor allem auch zukunftssichere Lösung zu schaffen. Allerdings waren auch hier die Anforderungen an die Software nicht trivial. Neue Inhalte müssen einfach und schnell eingebunden werden. Bücher müssen auf allen gängigen Geräten nutzbar sein. Und falls in manchen Klassenzimmern die Internetverbindung schlecht ist, muss auch hierfür eine Lösung gefunden werden.
 
   h2 Die Lösung
   p
